# agent-paradise-standards-system

./: .cursorignore  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUTURE-WORK.md  LICENSE  NOTICE  README.md  justfile  primitives.config.yaml  topology-3d.html
crates/aps-cli/: Cargo.toml
crates/aps-cli/src/: main.rs  vsa_config.rs
crates/aps-cli/tests/: backwards_compat_test.rs  integration_test.rs  self_validation_test.rs  substandard_test.rs  template_test.rs  validation_test.rs  workflow_test.rs
crates/aps-cli/tests/fixtures/: mod.rs
crates/aps-core/: Cargo.toml
crates/aps-core/src/: config.rs  consumer.rs  diagnostics.rs  discovery.rs  lib.rs  lockfile.rs  manifest.rs  metadata.rs  promotion.rs  registry.rs  resolution.rs  standard_config.rs  versioning.rs
crates/apss-bootstrap/: Cargo.toml
crates/apss-bootstrap/src/: init.rs  install.rs  main.rs
standards-experimental/v1/EXP-V1-0001-code-topology/: Cargo.toml  experiment.toml
standards-experimental/v1/EXP-V1-0001-code-topology/agents/skills/: README.md  analyze-topology.md  visualize-architecture.md
standards-experimental/v1/EXP-V1-0001-code-topology/docs/: 00_overview.md  01_spec.md
standards-experimental/v1/EXP-V1-0001-code-topology/docs/adrs/: 0001-layered-artifacts.md
standards-experimental/v1/EXP-V1-0001-code-topology/examples/: README.md  analyze_rust.rs  render_aps.rs  render_mermaid.rs  render_sample.rs
standards-experimental/v1/EXP-V1-0001-code-topology/examples/sample-topology/: manifest.toml
standards-experimental/v1/EXP-V1-0001-code-topology/proto/: graphs.proto  topology.proto
standards-experimental/v1/EXP-V1-0001-code-topology/src/: lib.rs
standards-experimental/v1/EXP-V1-0001-code-topology/src/adapter/: complexity.rs  mod.rs  queries.rs
standards-experimental/v1/EXP-V1-0001-code-topology/substandards/3D01-force-directed/: Cargo.toml  substandard.toml
standards-experimental/v1/EXP-V1-0001-code-topology/substandards/CI01-github-actions/: substandard.toml
standards-experimental/v1/EXP-V1-0001-code-topology/substandards/LANG01-rust/: Cargo.toml  substandard.toml
standards-experimental/v1/EXP-V1-0001-code-topology/substandards/VIZ01-dashboard/: Cargo.toml  README.md  substandard.toml
standards-experimental/v1/EXP-V1-0001-code-topology/substandards/VIZ01-mermaid/: Cargo.toml  substandard.toml
standards-experimental/v1/EXP-V1-0001-code-topology/tests/: README.md  artifact_parsing.rs
standards-experimental/v1/EXP-V1-0002-todo-tracker/: Cargo.toml  experiment.toml
standards-experimental/v1/EXP-V1-0002-todo-tracker/agents/skills/: README.md
standards-experimental/v1/EXP-V1-0002-todo-tracker/docs/: 00_overview.md  01_spec.md
standards-experimental/v1/EXP-V1-0002-todo-tracker/examples/: README.md
standards-experimental/v1/EXP-V1-0002-todo-tracker/src/: artifact.rs  config.rs  languages.rs  lib.rs  scanner.rs
standards-experimental/v1/EXP-V1-0002-todo-tracker/tests/: README.md  scanner_integration_test.rs
standards-experimental/v1/EXP-V1-0003-fitness-functions/: Cargo.toml  experiment.toml
standards-experimental/v1/EXP-V1-0003-fitness-functions/agents/skills/: README.md
standards-experimental/v1/EXP-V1-0003-fitness-functions/docs/: 00_overview.md  01_spec.md
standards-experimental/v1/EXP-V1-0003-fitness-functions/examples/: README.md  fitness-exceptions.toml  fitness-report.json  fitness.toml
standards-experimental/v1/EXP-V1-0003-fitness-functions/src/: lib.rs
standards-experimental/v1/EXP-V1-0003-fitness-functions/tests/: README.md  rule_parsing.rs  threshold_eval.rs
standards-experimental/v1/EXP-V1-0004-documentation/: Cargo.toml  experiment.toml
standards-experimental/v1/EXP-V1-0004-documentation/agents/skills/: README.md
standards-experimental/v1/EXP-V1-0004-documentation/docs/: 00_overview.md  01_spec.md
standards-experimental/v1/EXP-V1-0004-documentation/docs/adrs/: 0001-modules-not-substandards.md  0002-config-schema.md
standards-experimental/v1/EXP-V1-0004-documentation/examples/: README.md  config.toml
standards-experimental/v1/EXP-V1-0004-documentation/src/: config.rs  context.rs  frontmatter.rs  index.rs  lib.rs  readme.rs
standards-experimental/v1/EXP-V1-0004-documentation/substandards/ADR01-architecture-decision-records/: Cargo.toml  substandard.toml
standards-experimental/v1/EXP-V1-0004-documentation/tests/: config_parsing.rs  index_generation.rs  readme_validation.rs
standards/v1/APS-V1-0001-code-topology/substandards/3D01-force-directed/: Cargo.toml
standards/v1/APS-V1-0001-code-topology/substandards/CI01-github-actions/: Cargo.toml
standards/v1/APS-V1-0001-code-topology/substandards/LANG01-rust/: Cargo.toml  substandard.toml
standards/v1/APS-V1-0001-code-topology/substandards/VIZ01-dashboard/: Cargo.toml  substandard.toml
standards/v1/APS-V1-0002-architecture-fitness/: Cargo.toml  standard.toml
standards/v1/APS-V1-0002-architecture-fitness/agents/skills/: README.md  configure-dimensions.md  interpret-report.md  validate-fitness.md
standards/v1/APS-V1-0002-architecture-fitness/docs/: 00_overview.md  01_spec.md  02_metrics-catalog.md  INTEGRATION.md
standards/v1/APS-V1-0002-architecture-fitness/docs/adrs/: 0001-promotion-from-exp-v1-0003.md  0002-mt01-md01-promotion.md
standards/v1/APS-V1-0002-architecture-fitness/examples/: README.md  fitness-composite.json  fitness-exceptions.toml  fitness-report.json  fitness.toml
standards/v1/APS-V1-0002-architecture-fitness/schemas/: fitness-config.schema.json  fitness-exceptions.schema.json  fitness-report.schema.json
standards/v1/APS-V1-0002-architecture-fitness/src/: lib.rs
standards/v1/APS-V1-0002-architecture-fitness/substandards/0002-AC01-accessibility/: Cargo.toml
standards/v1/APS-V1-0002-architecture-fitness/substandards/0002-AV01-availability/: Cargo.toml
standards/v1/APS-V1-0002-architecture-fitness/substandards/0002-LG01-legality/: Cargo.toml
standards/v1/APS-V1-0002-architecture-fitness/tests/: README.md  dependency_eval.rs  dimension_scoring.rs  rule_parsing.rs  schema_compliance.rs  system_fitness.rs  threshold_eval.rs
(+220 files in other folders)
