[workspace]
resolver = "2"
members = [
    "crates/aps-core",
    "crates/aps-cli",
    "standards/v1/APS-V1-0000-meta",
]
exclude = [
    "lib/agentic-primitives",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AgentParadise/agent-paradise-standards-system"
rust-version = "1.85"

[workspace.dependencies]
# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Filesystem
walkdir = "2.5"
glob = "0.3"

# Templates
handlebars = "6.3"

# Internal crates
aps-core = { path = "crates/aps-core" }

