[workspace]
resolver = "2"
members = [
    "crates/aps-core",
    "crates/aps-cli",
    "standards/v1/APS-V1-0000-meta",
    "standards/v1/APS-V1-0000-meta/substandards/SS01-substandard-structure",
    "standards/v1/APS-V1-0000-meta/substandards/CL01-cli-contract",
    # Official standards
    "standards/v1/APS-V1-0001-code-topology",
    "standards/v1/APS-V1-0001-code-topology/substandards/3D01-force-directed",
    "standards/v1/APS-V1-0001-code-topology/substandards/VIZ01-dashboard",
    "standards/v1/APS-V1-0001-code-topology/substandards/VIZ01-mermaid",
    "standards/v1/APS-V1-0001-code-topology/substandards/LANG01-rust",
    "standards/v1/APS-V1-0001-code-topology/substandards/CI01-github-actions",
    # Experimental standards
    "standards-experimental/v1/EXP-V1-0002-todo-tracker",
    "standards-experimental/v1/EXP-V1-0003-fitness-functions",
]
exclude = [
    "lib/agentic-primitives",
    "standards-experimental/v1/EXP-V1-0001-code-topology",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/AgentParadise/agent-paradise-standards-system"
rust-version = "1.85"

[workspace.dependencies]
# Error handling
thiserror = "2.0"

# Tree-sitter (for language analysis)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Filesystem
walkdir = "2.5"
glob = "0.3"

# Templates
handlebars = "6.3"

# Internal crates
aps-core = { path = "crates/aps-core" }

