[package]
name = "aps-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI for APS validation and scaffolding"

[[bin]]
name = "aps"
path = "src/main.rs"

[dependencies]
aps-core.workspace = true
aps-v1-0000-meta = { path = "../../standards/v1/APS-V1-0000-meta" }
code-topology = { path = "../../standards/v1/APS-V1-0001-code-topology" }
code-topology-3d = { path = "../../standards/v1/APS-V1-0001-code-topology/substandards/3D01-force-directed" }
code-topology-viz = { path = "../../standards/v1/APS-V1-0001-code-topology/substandards/VIZ01-dashboard" }
code-topology-rust-adapter = { path = "../../standards/v1/APS-V1-0001-code-topology/substandards/LANG01-rust" }
fitness-functions = { path = "../../standards-experimental/v1/EXP-V1-0003-fitness-functions" }
architecture-fitness = { path = "../../standards/v1/APS-V1-0002-architecture-fitness" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
chrono = "0.4.42"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }

[dev-dependencies]
tempfile = "3.14"
toml = "0.8"
regex = "1.11"

