[package]
name = "aps-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core engine for APS validation, discovery, and diagnostics"

[dependencies]
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
walkdir.workspace = true

