[package]
name = "code-topology"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Code Topology and Coupling Analysis (Experimental)"

[dependencies]
aps-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.14"

