[package]
name = "code-topology-3d"
version = "0.1.0"
edition = "2024"
description = "3D Force-Directed Coupling Visualization for Code Topology"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AgentParadise/agent-paradise-standards-system"

[dependencies]
code-topology = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"

