[package]
name = "code-topology-viz"
version = "0.1.0"
edition = "2024"
description = "Topology Visualization Dashboard - Interactive HTML visualizations for code topology"
license = "MIT"
repository = "https://github.com/AgentParadise/agent-paradise-standards-system"

[dependencies]
code-topology = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["std"] }

[dev-dependencies]
tempfile = "3.14"
