[package]
name = "code-topology-mermaid"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Mermaid diagram projector for Code Topology (C4, flowchart, dependency graphs)"

[dependencies]
code-topology = { path = "../.." }
serde.workspace = true
serde_json.workspace = true

