[package]
name = "code-topology-3d"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "3D Force-Directed Coupling Visualization for Code Topology"

[dependencies]
code-topology = { path = "../.." }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.14"
