[package]
name = "code-topology-ci-github-actions"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GitHub Actions CI integration for Code Topology — generates workflow templates and checks"

[dependencies]
code-topology = { path = "../.." }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.14"
