[package]
name = "code-topology-viz"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Topology Visualization Dashboard - Interactive HTML visualizations for code topology"

[dependencies]
code-topology = { path = "../.." }
serde.workspace = true
serde_json.workspace = true

# Timestamps for dashboard generation
chrono = { version = "0.4", features = ["std"] }

[dev-dependencies]
tempfile = "3.14"
