[package]
name = "architecture-fitness-ac01"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Accessibility Dimension — substandard of APS-V1-0002"

[dependencies]
architecture-fitness = { path = "../.." }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.14"
